# hyper-k-core

./: .gitignore  CMakeLists.txt  README.md  main_run.sh
results/: results-Execution_Time.csv  results-Execution_Time_with_Different_Filtering_Strategies.csv  results-Filer-threads-stack-overflow-full.csv  results-Filter-coauth-DBLP-full-1-1.csv  results-Filter-coauth-DBLP-full.csv  results-Filter-hyperedges-amazon-reviews.csv  results-HyperCD*_E_D.csv  results-HyperCD++_E_D.csv  results-Initialization_Time.csv  results-Memory.csv  results-Par-Big_Power_Law.csv  results-Par-hyperedges-amazon-reviews.csv  results-Par-hyperedges-stackoverflow-answers.csv  results-Total_time.csv
src/: Hypergraph.cpp  Hypergraph.h  main.cpp
src/Algorithm/: Final_nbrCoreDecomposition.cpp  Final_nbrCoreDecomposition_lowerBound.cpp  Final_nbrCoreDecomposition_no_filter.cpp  Final_nbrCoreDecomposition_onlyChanegd.cpp  Final_nbrCoreDecomposition_withNbrs.cpp  NbrCD.h  ParNbrCoreDecomposition.cpp  baseNbrCoreDecomposition.cpp  baseNbrCoreDecomposition_withNbrs.cpp  fullNbrCoreDecomposition.cpp  fullNbrCoreDecomposition_withNbrs.cpp
src/Algorithm_withInfo/: Final_nbrCoreDecomposition.cpp  Final_nbrCoreDecomposition_lowerBound.cpp  Final_nbrCoreDecomposition_no_filter.cpp  Final_nbrCoreDecomposition_onlyChanegd.cpp  Final_nbrCoreDecomposition_withNbrs.cpp  NbrCD.h  ParNbrCoreDecomposition.cpp  baseNbrCoreDecomposition.cpp  baseNbrCoreDecomposition_withNbrs.cpp  fullNbrCoreDecomposition.cpp  fullNbrCoreDecomposition_withNbrs.cpp
src/graphTool/: generateGraph.cpp  graphTool.cpp  graphTool.h  sortGraph.cpp
